--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": ["eslint:recommended", "next/core-web-vitals"],
+	"plugins": ["simple-import-sort", "jsx-a11y"],
+	"rules": {
+		"no-console": "error",
+		"curly": "error",
+		"no-constant-binary-expression": "error",
+		"no-nested-ternary": "error",
+		"require-await": "error",
+		"simple-import-sort/imports": "error"
+	}
 }
